rank endpoint added and working with stored procedure data
