# server/common/api.yml
@@ -58,6 +58,42 @@ definitions:
 
 
 paths:
+  /ranks:
+    get:
+      description: Returns all players with ranks and points
+      operationId: findAllRanks
+      responses:
+        default:
+          description: Returns the matching ranks
+          schema:
+            properties:
+              id:
+                type: integer 
+                format: int32
+                description: The auto-generated rank ID
+                readOnly: true
+                example: 65
+              name:
+                type: string
+                minLength: 1
+                pattern: "^[a-zA-Z0-9- ]+$"
+                example: goku
+              won:
+                type: integer
+                example: 5
+              lost:
+                type: integer
+                example: 5
+              tied:
+                type: integer
+                example: 5
+              points:
+                type: integer
+                example: 5
+          headers:
+            last-modified:
+              type: string
+              description: The URL of the newly-added game
   /games:
     post:
       description: Create a new game
@@ -79,7 +115,7 @@ paths:
                 format: int32
                 description: The auto-generated game ID
                 readOnly: true
-                example: 65
+                example: 2
               firstPlayer:
                 type: string
                 minLength: 1
@@ -109,7 +145,7 @@ paths:
           headers:
             Location:
               type: string
-              description: The URL of the newly-added game
+              description: The URL of the request
 
   /examples:
     post:
